tests/success/auto_defer_ptr/main.adept

pragma => adept("3.0")

#[foreign]
func printf(format ptr#char, ...) int

struct Person (firstname ptr#char, lastname ptr#char)

func main {
    john := Person { firstname: c"John", lastname: c"Smith" }
    person := &john

    printf(c"%s %s\n", person.firstname, person.lastname)
}
